add global webpages

--- a/src/main/resources/webserver/template/global/index/index.html
+++ b/src/main/resources/webserver/template/global/index/index.html
@@ -1,97 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>SmartHome</title>
-        <link rel="stylesheet" type="text/css" href="/static/semantic/semantic.min.css">
-        <link rel="stylesheet" type="text/css" href="/static/style/global.css">
-        <script src="/static/jquery/jquery-3.3.1.min.js"></script>
-        <script src="/static/semantic/semantic.min.js"></script>
-        <script type="text/javascript">
-            
-        </script>
-    </head>
-    <body>
-        <header>
-            <div class="ui fixed inverted menu large">
-                <a href="index.html" class="header item">
-                    <img src="/static/img/icon/smarthome.png" width="32" height="32" class="logo">
-                     SmartHome
-                </a>
-                <div class="right menu">
-                    <a href="/settings" class="item"><i class="setting icon large"></i></a>
+<head>
+    <meta charset="UTF-8">
+    <title>SmartHome</title>
+    {% include '/webserver/template/header.html' %}
+    <link rel="manifest" href="/static/manifest/globalmanifest.json">
+</head>
+<body>
+<header>
+    <div class="ui fixed inverted menu large">
+        <a href="/index" class="header item">
+            <img src="/static/img/icon/global.png" width="32" height="32" class="logo">
+            SmartHome
+        </a>
+        <div class="right menu">
+            <a href="/admin/index" class="item"><i class="setting icon large"></i></a>
+        </div>
+    </div>
+</header>
+<main class="ui main container">
+    <div class="ui segment">
+        <div class="ui link cards four column doubling stackable">
+            <div class="card" onclick="window.location = ''">
+                <div class="image">
+                    <img src="/static/img/icon/smart.png">
+                </div>
+                <div class="content">
+                    <div class="header">SmartHome</div>
                 </div>
             </div>
-        </header>
-        <main class="ui main container">
-            <div class="ui segment">
-                <div class="ui link cards four column doubling stackable">
-                    <div class="card" onclick="window.location = ''">
-                        <div class="image">
-                            <img src="/static/img/icon/smart.png">
-                        </div>
-                        <div class="content">
-                            <div class="header">SmartHome</div>
-                        </div>
-                    </div>
-                    <div class="card" onclick="window.location = ''">
-                        <div class="image">
-                            <img src="/static/img/icon/movie.png">
-                        </div>
-                        <div class="content">
-                            <div class="header">Filme</div>
-                        </div>
-                    </div>
-                    <div class="card" onclick="window.location = ''">
-                        <div class="image">
-                            <img src="/static/img/icon/audio.png">
-                        </div>
-                        <div class="content">
-                            <div class="header">Musik</div>
-                        </div>
-                    </div>
-                    <div class="card" onclick="window.location = ''">
-                        <div class="image">
-                            <img src="/static/img/icon/photo.png">
-                        </div>
-                        <div class="content">
-                            <div class="header">Bilder</div>
-                        </div>
-                    </div>
-                    <div class="card" onclick="window.location = ''">
-                        <div class="image">
-                            <img src="/static/img/icon/recipe.png">
-                        </div>
-                        <div class="content">
-                            <div class="header">Rezepte</div>
-                        </div>
-                    </div>
-                    <div class="card" onclick="window.location = ''">
-                        <div class="image">
-                            <img src="/static/img/icon/shoppinglist.png">
-                        </div>
-                        <div class="content">
-                            <div class="header">Einkaufsliste</div>
-                        </div>
-                    </div>
-                    <div class="card" onclick="window.location = ''">
-                        <div class="image">
-                            <img src="/static/img/icon/calendar.png">
-                        </div>
-                        <div class="content">
-                            <div class="header">Kalender</div>
-                        </div>
-                    </div>
-                    <div class="card" onclick="window.location = ''">
-                        <div class="image">
-                            <img src="/static/img/icon/contacts.png">
-                        </div>
-                        <div class="content">
-                            <div class="header">Kontakte</div>
-                        </div>
-                    </div>
+            <div class="card" onclick="window.location = ''">
+                <div class="image">
+                    <img src="/static/img/icon/movie.png">
+                </div>
+                <div class="content">
+                    <div class="header">Filme</div>
                 </div>
             </div>
-        </main>
-    </body>
+            <div class="card" onclick="window.location = ''">
+                <div class="image">
+                    <img src="/static/img/icon/audio.png">
+                </div>
+                <div class="content">
+                    <div class="header">Musik</div>
+                </div>
+            </div>
+            <div class="card" onclick="window.location = ''">
+                <div class="image">
+                    <img src="/static/img/icon/photo.png">
+                </div>
+                <div class="content">
+                    <div class="header">Bilder</div>
+                </div>
+            </div>
+            <div class="card" onclick="window.location = ''">
+                <div class="image">
+                    <img src="/static/img/icon/recipe.png">
+                </div>
+                <div class="content">
+                    <div class="header">Rezepte</div>
+                </div>
+            </div>
+            <div class="card" onclick="window.location = ''">
+                <div class="image">
+                    <img src="/static/img/icon/shoppinglist.png">
+                </div>
+                <div class="content">
+                    <div class="header">Einkaufsliste</div>
+                </div>
+            </div>
+            <div class="card" onclick="window.location = ''">
+                <div class="image">
+                    <img src="/static/img/icon/calendar.png">
+                </div>
+                <div class="content">
+                    <div class="header">Kalender</div>
+                </div>
+            </div>
+            <div class="card" onclick="window.location = ''">
+                <div class="image">
+                    <img src="/static/img/icon/contacts.png">
+                </div>
+                <div class="content">
+                    <div class="header">Kontakte</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+</body>
 </html>
