init automation modul

--- a/src/main/resources/webserver/template/global/user/index.html
+++ b/src/main/resources/webserver/template/global/user/index.html
@@ -21,12 +21,12 @@
 <main class="ui main container">
     <div class="ui segment">
         <div class="ui link cards four column doubling stackable">
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/automation/index'">
                 <div class="image">
                     <img src="/static/img/icon/smart.png">
                 </div>
                 <div class="content">
-                    <div class="header">SmartHome</div>
+                    <div class="header">Automatisierung</div>
                 </div>
             </div>
             <div class="card" onclick="window.location = ''">
