--- a/src/main/resources/webserver/template/automation/admin/headline.html
+++ b/src/main/resources/webserver/template/automation/admin/headline.html
@@ -1,8 +1,8 @@
 <header>
     <div class="ui fixed inverted menu large">
-        <a href="/admin/index" class="header item">
+        <a href="/automation/index" class="header item">
             <img src="/static/img/icon/global.png" width="32" height="32" class="logo">
-            SmartHome Admin
+            Automatisierung Admin
         </a>
         {% if backlink is defined %}
         <div class="right menu">
