add automation settings

--- a/src/main/resources/webserver/template/automation/admin/headline.html
+++ b/src/main/resources/webserver/template/automation/admin/headline.html
@@ -1,6 +1,6 @@
 <header>
     <div class="ui fixed inverted menu large">
-        <a href="/automation/index" class="header item">
+        <a href="/automation/admin/index" class="header item">
             <img src="/static/img/icon/global.png" width="32" height="32" class="logo">
             Automatisierung Admin
         </a>
