--- a/src/main/resources/webserver/template/automation/admin/index.html
+++ b/src/main/resources/webserver/template/automation/admin/index.html
@@ -37,6 +37,14 @@
             </div>
             <div class="card" onclick="window.location = ''">
                 <div class="image">
+                    <img src="/static/img/icon/sensorvalues.png">
+                </div>
+                <div class="content">
+                    <div class="header">Sensorwerte</div>
+                </div>
+            </div>
+            <div class="card" onclick="window.location = '/automation/admin/settings'">
+                <div class="image">
                     <img src="/static/img/icon/settings.png">
                 </div>
                 <div class="content">
