--- a/src/main/resources/webserver/template/automation/user/headline.html
+++ b/src/main/resources/webserver/template/automation/user/headline.html
@@ -1,7 +1,7 @@
 <header>
     <div class="ui fixed inverted menu large">
         <a href="/automation/index" class="header item">
-            <img src="/static/img/icon/global.png" width="32" height="32" class="logo">
+            <img src="/static/img/icon/smart.png" width="32" height="32" class="logo">
             Automatisierung
         </a>
         {% if backlink is defined %}
