--- a/src/main/resources/webserver/template/global/admin/settings.html
+++ b/src/main/resources/webserver/template/global/admin/settings.html
@@ -18,33 +18,45 @@
         <div>
             <h2 class="ui header">Einstellungen</h2>
         </div>
+        <div class="ui divider"></div>
         {% if success is defined %}
-            {% if success %}
-                <div class="ui message success">
+        {% if success %}
+        <div class="ui message success">
                     Die Einstellungen wurden erfolgreich gespeichert
                 </div>
-            {% else %}
-                <div class="ui message error">
+        {% else %}
+        <div class="ui message error">
                     Die Einstellungen konnten nicht gespeichert werden
                 </div>
-            {% endif %}
         {% endif %}
-        <div class="ui divider"></div>
+        {% endif %}
         <form class="ui form" method="post" action="/admin/settings">
             <div class="ui top attached tabular menu">
                 <div data-tab="webserverUnsave" class="active item" style="cursor: pointer;">Webserver (unverschl&uuml;sselt)</div>
                 <div data-tab="webserverSave" class="item" style="cursor: pointer;">Webserver (verschl&uuml;sselt)</div>
             </div>
             <div data-tab="webserverUnsave" class="ui bottom attached tab segment active">
+                <div class="ui icon info message">
+                    <i class="info icon black"></i>
+                    <div class="content">
+                        <p>&Auml;nderungen an den Einstellungen werden erst nach einem Neustart des Servers &uuml;bernommen.</p>
+                    </div>
+                </div>
                 <div class="field required">
                     <label>Port des Webservers</label>
-                    <input name="port" type="number" min="0" max="65535" step="1" value="{{ port | escape }}">
+                    <input name="port" type="number" min="0" max="65535" step="1" value="{{ port | escape }}" required>
                 </div>
             </div>
             <div data-tab="webserverSave" class="ui bottom attached tab segment">
+                <div class="ui icon info message">
+                    <i class="info icon black"></i>
+                    <div class="content">
+                        <p>&Auml;nderungen an den Einstellungen werden erst nach einem Neustart des Servers &uuml;bernommen.</p>
+                    </div>
+                </div>
                 <div class="field required">
                     <label>Port des Webservers</label>
-                    <input name="securePort" type="number" min="0" max="65535" step="1" value="{{ securePort | escape }}">
+                    <input name="securePort" type="number" min="0" max="65535" step="1" value="{{ securePort | escape }}" required>
                 </div>
                 <div class="field">
                     <label>Passwort des Key Store</label>
