--- a/src/main/resources/webserver/template/automation/admin/switchserverlist.html
+++ b/src/main/resources/webserver/template/automation/admin/switchserverlist.html
@@ -32,14 +32,19 @@
         <div>
             <h2 class="ui header">Schaltserver verwalten</h2>
         </div>
+        {% if success is defined %}
+        <div class="ui message {% if success %}success{% else %}error{% endif %}">
+            {{ message | escape }}
+        </div>
+        {% endif %}
         <div class="ui divider"></div>
-        <div class="ui top attached menu">
-            <a class="item" href="/automation/admin/addswitchserver">
+        <div class="ui top attached menu inverted blue">
+            <a class="item" href="/automation/admin/switchserverform">
                 <i class="plus icon"></i> hinzuf&uuml;gen
             </a>
             <div class="right menu">
                 <div class="ui right aligned category search item">
-                    <div class="ui transparent icon input">
+                    <div class="ui icon input">
                         <input class="prompt" type="text" placeholder="Search ..." {% if filterStr is defined %}value="{{ filterStr | escape }}"{% endif %}>
                         <i class="search link icon"></i>
                     </div>
@@ -65,7 +70,7 @@
                             </td>
                             <td>
                                 <div class="ui icon buttons">
-                                    <button title="bearbeiten" class="ui button" onclick="window.location = '/automation/admin/editswitchserver?id={{ element.getId() }}'"><i class="edit icon orange large"></i></button>
+                                    <button title="bearbeiten" class="ui button" onclick="window.location = '/automation/admin/switchserverform?id={{ element.getId() }}'"><i class="edit icon orange large"></i></button>
                                     <button title="l&ouml;schen" class="ui button" onclick="$('#{{ randomId }}').modal('show')"><i class="remove red icon large"></i></button>
                                 </div>
                                 <div class="ui basic modal" id="{{ randomId }}">
@@ -81,7 +86,7 @@
                                             <i class="remove icon"></i>
                                             Nein
                                         </div>
-                                        <div class="ui green ok inverted button" onclick="window.location = '/automation/admin/deleteswitchserver?id={{ element.getId() }}'">
+                                        <div class="ui green ok inverted button" onclick="window.location = '/automation/admin/switchserverdelete?id={{ element.getId() }}'">
                                             <i class="checkmark icon"></i>
                                             Ja
                                         </div>
