add sidebar navigation

--- a/src/main/resources/webserver/template/automation/admin/settings.html
+++ b/src/main/resources/webserver/template/automation/admin/settings.html
@@ -25,7 +25,7 @@
     </script>
 </head>
 <body>
-{% include '/webserver/template/automation/admin/headline.html' %}
+{% include '/webserver/template/automation/admin/headline.html' with {module: 'settings'} %}
 <main class="ui main container">
     <div class="ui segment">
         <div>
