--- a/src/main/resources/webserver/template/automation/admin/switchserverlist.html
+++ b/src/main/resources/webserver/template/automation/admin/switchserverlist.html
@@ -26,7 +26,7 @@
     </script>
 </head>
 <body>
-{% include '/webserver/template/automation/admin/headline.html' %}
+{% include '/webserver/template/automation/admin/headline.html' with {module: 'switchserver'} %}
 <main class="ui main container">
     <div class="ui segment">
         <div>
