--- a/src/main/resources/webserver/template/automation/user/index.html
+++ b/src/main/resources/webserver/template/automation/user/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="/static/manifest/automationmanifest.json">
 </head>
 <body>
-{% include '/webserver/template/automation/user/headline.html' with {backlink: '/index'} %}
+{% include '/webserver/template/automation/user/headline.html' %}
 <main class="ui main container">
     <div class="ui segment">
         <div class="ui link cards four column doubling stackable">
