--- a/src/main/resources/webserver/template/global/admin/backup.html
+++ b/src/main/resources/webserver/template/global/admin/backup.html
@@ -6,7 +6,7 @@
     {% include '/webserver/template/header.html' %}
 </head>
 <body>
-{% include '/webserver/template/global/admin/headline.html' %}
+{% include '/webserver/template/global/admin/headline.html' with {module: 'backup'} %}
 <main class="ui main container">
     <div class="ui segment">
         <h1>Comming soon ...</h1>
