--- a/src/main/resources/webserver/template/global/admin/index.html
+++ b/src/main/resources/webserver/template/global/admin/index.html
@@ -6,7 +6,7 @@
     {% include '/webserver/template/header.html' %}
 </head>
 <body>
-{% include '/webserver/template/global/admin/headline.html' with {backlink: '/index'} %}
+{% include '/webserver/template/global/admin/headline.html' with {module: 'admin'} %}
 <main class="ui main container">
     <div class="ui segment">
         <div class="ui link cards four column doubling stackable">
