--- a/src/main/resources/webserver/template/global/admin/info.html
+++ b/src/main/resources/webserver/template/global/admin/info.html
@@ -13,7 +13,7 @@
     </script>
 </head>
 <body>
-{% include '/webserver/template/global/admin/headline.html' %}
+{% include '/webserver/template/global/admin/headline.html' with {module: 'info'} %}
 <main class="ui main container">
     <div class="ui segment">
         <div>
