--- a/src/main/resources/webserver/template/global/admin/settings.html
+++ b/src/main/resources/webserver/template/global/admin/settings.html
@@ -12,7 +12,7 @@
     </script>
 </head>
 <body>
-{% include '/webserver/template/global/admin/headline.html' %}
+{% include '/webserver/template/global/admin/headline.html' with {module: 'settings'} %}
 <main class="ui main container">
     <div class="ui segment">
         <div>
