--- a/src/main/resources/webserver/template/global/user/index.html
+++ b/src/main/resources/webserver/template/global/user/index.html
@@ -29,7 +29,7 @@
                     <div class="header">Automatisierung</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/movie/index'">
                 <div class="image">
                     <img src="/static/img/icon/movie.png">
                 </div>
@@ -37,7 +37,7 @@
                     <div class="header">Filme</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/audio/index'">
                 <div class="image">
                     <img src="/static/img/icon/audio.png">
                 </div>
@@ -45,7 +45,7 @@
                     <div class="header">Musik</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/photo/index'">
                 <div class="image">
                     <img src="/static/img/icon/photo.png">
                 </div>
@@ -53,7 +53,7 @@
                     <div class="header">Bilder</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/recipe/index'">
                 <div class="image">
                     <img src="/static/img/icon/recipe.png">
                 </div>
@@ -61,7 +61,7 @@
                     <div class="header">Rezepte</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/shoppinglist/index'">
                 <div class="image">
                     <img src="/static/img/icon/shoppinglist.png">
                 </div>
@@ -69,7 +69,7 @@
                     <div class="header">Einkaufsliste</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/calendar/index'">
                 <div class="image">
                     <img src="/static/img/icon/calendar.png">
                 </div>
@@ -77,7 +77,7 @@
                     <div class="header">Kalender</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/contacts/index'">
                 <div class="image">
                     <img src="/static/img/icon/contacts.png">
                 </div>
