--- a/src/main/resources/webserver/template/automation/admin/headline.html
+++ b/src/main/resources/webserver/template/automation/admin/headline.html
@@ -1,13 +1,40 @@
 <header>
     <div class="ui fixed inverted menu large">
-        <a href="/automation/admin/index" class="header item">
+        <a onclick="$('.ui.labeled.icon.sidebar').sidebar('toggle')"  class="header item">
             <img src="/static/img/icon/smart.png" width="32" height="32" class="logo">
             Automatisierung Admin
         </a>
-        {% if backlink is defined %}
-        <div class="right menu">
-            <a href="{{ backlink }}" class="item"><i class="angle up icon large"></i></a>
-        </div>
-        {% endif %}
     </div>
 </header>
+<aside>
+    <div class="ui left vertical inverted sidebar labeled icon menu scale down">
+        <a href="/automation/index" class="item">
+            <img src="/static/img/icon/smart.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Automatisierung
+        </a>
+        <a href="/automation/admin/index" class="item {% if module == 'admin' %}active{% endif %}">
+            <img src="/static/img/icon/smart.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Automatisierung Admin
+        </a>
+        <a href="/automation/admin/room" class="item {% if module == 'room' %}active{% endif %}">
+            <img src="/static/img/icon/room.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            R&auml;me
+        </a>
+        <a href="/automation/admin/device" class="item {% if module == 'device' %}active{% endif %}">
+            <img src="/static/img/icon/device.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Ger&auml;te
+        </a>
+        <a href="/automation/admin/switchserver" class="item {% if module == 'switchserver' %}active{% endif %}">
+            <img src="/static/img/icon/switchserver.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Schaltserver
+        </a>
+        <a href="/automation/admin/sensorvalues" class="item {% if module == 'sensorvalues' %}active{% endif %}">
+            <img src="/static/img/icon/sensorvalues.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Sensorwerte
+        </a>
+        <a href="/automation/admin/settings" class="item {% if module == 'settings' %}active{% endif %}">
+            <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Einstellungen
+        </a>
+    </div>
+</aside>
