--- a/src/main/resources/webserver/template/automation/admin/index.html
+++ b/src/main/resources/webserver/template/automation/admin/index.html
@@ -6,11 +6,11 @@
     {% include '/webserver/template/header.html' %}
 </head>
 <body>
-{% include '/webserver/template/automation/admin/headline.html' with {backlink: '/automation/index'} %}
+{% include '/webserver/template/automation/admin/headline.html' with {module: 'admin'} %}
 <main class="ui main container">
     <div class="ui segment">
         <div class="ui link cards four column doubling stackable">
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/automation/admin/room'">
                 <div class="image">
                     <img src="/static/img/icon/room.png">
                 </div>
@@ -18,7 +18,7 @@
                     <div class="header">R&auml;me</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/automation/admin/device'">
                 <div class="image">
                     <img src="/static/img/icon/device.png">
                 </div>
@@ -26,7 +26,7 @@
                     <div class="header">Ger&auml;te</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = '/automation/admin/switchserverlist'">
+            <div class="card" onclick="window.location = '/automation/admin/switchserver'">
                 <div class="image">
                     <img src="/static/img/icon/switchserver.png">
                 </div>
@@ -34,7 +34,7 @@
                     <div class="header">Schaltserver</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = ''">
+            <div class="card" onclick="window.location = '/automation/admin/sensorvalues'">
                 <div class="image">
                     <img src="/static/img/icon/sensorvalues.png">
                 </div>
