--- a/src/main/resources/webserver/template/global/admin/headline.html
+++ b/src/main/resources/webserver/template/global/admin/headline.html
@@ -1,13 +1,32 @@
 <header>
     <div class="ui fixed inverted menu large">
-        <a href="/admin/index" class="header item">
+        <a onclick="$('.ui.labeled.icon.sidebar').sidebar('toggle')"  class="header item">
             <img src="/static/img/icon/global.png" width="32" height="32" class="logo">
             SmartHome Admin
         </a>
-        {% if backlink is defined %}
-        <div class="right menu">
-            <a href="{{ backlink }}" class="item"><i class="angle up icon large"></i></a>
-        </div>
-        {% endif %}
     </div>
 </header>
+<aside>
+    <div class="ui left vertical inverted sidebar labeled icon menu scale down">
+        <a href="/index" class="item">
+            <img src="/static/img/icon/global.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            SmartHome
+        </a>
+        <a href="/admin/index" class="item {% if module == 'admin' %}active{% endif %}">
+            <img src="/static/img/icon/global.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            SmartHome Admin
+        </a>
+        <a href="/admin/backup" class="item {% if module == 'backup' %}active{% endif %}">
+            <img src="/static/img/icon/backup.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Backup
+        </a>
+        <a href="/admin/settings" class="item {% if module == 'settings' %}active{% endif %}">
+            <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Einstellungen
+        </a>
+        <a href="/admin/info" class="item {% if module == 'info' %}active{% endif %}">
+            <img src="/static/img/icon/info.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Info
+        </a>
+    </div>
+</aside>
