fix text errors

--- a/src/main/resources/webserver/template/automation/admin/headline.html
+++ b/src/main/resources/webserver/template/automation/admin/headline.html
@@ -18,7 +18,7 @@
         </a>
         <a href="/automation/admin/room" class="item {% if module == 'room' %}active{% endif %}">
             <img src="/static/img/icon/room.png" width="64" height="64" class="logo" style="margin: 0 auto;">
-            R&auml;me
+            R&auml;ume
         </a>
         <a href="/automation/admin/device" class="item {% if module == 'device' %}active{% endif %}">
             <img src="/static/img/icon/device.png" width="64" height="64" class="logo" style="margin: 0 auto;">
