--- a/src/main/resources/webserver/template/automation/admin/index.html
+++ b/src/main/resources/webserver/template/automation/admin/index.html
@@ -15,7 +15,7 @@
                     <img src="/static/img/icon/room.png">
                 </div>
                 <div class="content">
-                    <div class="header">R&auml;me</div>
+                    <div class="header">R&auml;ume</div>
                 </div>
             </div>
             <div class="card" onclick="window.location = '/automation/admin/device'">
