prepare timer module

--- a/src/main/resources/webserver/template/automation/admin/headline.html
+++ b/src/main/resources/webserver/template/automation/admin/headline.html
@@ -16,10 +16,6 @@
             <img src="/static/img/icon/smart.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Automatisierung Admin
         </a>
-        <a href="/automation/admin/room" class="item {% if module == 'room' %}active{% endif %}">
-            <img src="/static/img/icon/room.png" width="64" height="64" class="logo" style="margin: 0 auto;">
-            R&auml;ume
-        </a>
         <a href="/automation/admin/device" class="item {% if module == 'device' %}active{% endif %}">
             <img src="/static/img/icon/device.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Ger&auml;te
@@ -31,6 +27,14 @@
         <a href="/automation/admin/sensorvalues" class="item {% if module == 'sensorvalues' %}active{% endif %}">
             <img src="/static/img/icon/sensorvalues.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Sensorwerte
+        </a>
+        <a href="/automation/admin/room" class="item {% if module == 'room' %}active{% endif %}">
+            <img src="/static/img/icon/room.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            R&auml;ume
+        </a>
+        <a href="/automation/admin/timer" class="item {% if module == 'timer' %}active{% endif %}">
+            <img src="/static/img/icon/timer.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Timer
         </a>
         <a href="/automation/admin/settings" class="item {% if module == 'settings' %}active{% endif %}">
             <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto;">
