--- a/src/main/resources/webserver/template/automation/admin/index.html
+++ b/src/main/resources/webserver/template/automation/admin/index.html
@@ -10,14 +10,6 @@
 <main class="ui main container">
     <div class="ui segment">
         <div class="ui link cards four column doubling stackable">
-            <div class="card" onclick="window.location = '/automation/admin/room'">
-                <div class="image">
-                    <img src="/static/img/icon/room.png">
-                </div>
-                <div class="content">
-                    <div class="header">R&auml;ume</div>
-                </div>
-            </div>
             <div class="card" onclick="window.location = '/automation/admin/device'">
                 <div class="image">
                     <img src="/static/img/icon/device.png">
@@ -40,6 +32,22 @@
                 </div>
                 <div class="content">
                     <div class="header">Sensorwerte</div>
+                </div>
+            </div>
+            <div class="card" onclick="window.location = '/automation/admin/room'">
+                <div class="image">
+                    <img src="/static/img/icon/room.png">
+                </div>
+                <div class="content">
+                    <div class="header">R&auml;ume</div>
+                </div>
+            </div>
+            <div class="card" onclick="window.location = '/automation/admin/timer'">
+                <div class="image">
+                    <img src="/static/img/icon/timer.png">
+                </div>
+                <div class="content">
+                    <div class="header">Timer</div>
                 </div>
             </div>
             <div class="card" onclick="window.location = '/automation/admin/settings'">
