--- a/src/main/resources/webserver/template/automation/admin/switchserverform.html
+++ b/src/main/resources/webserver/template/automation/admin/switchserverform.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Automatisierung Admin</title>
+    <title>Automatisierung Schaltserver</title>
     {% include '/webserver/template/header.html' %}
     <script type="text/javascript">
         $(function() {
