--- a/src/main/resources/webserver/template/automation/admin/switchserverlist.html
+++ b/src/main/resources/webserver/template/automation/admin/switchserverlist.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Automatisierung Admin</title>
+    <title>Automatisierung Schaltserver</title>
     {% include '/webserver/template/header.html' %}
     <script type="text/javascript">
 
@@ -51,73 +51,65 @@
                 </div>
             </div>
         </div>
-        <div class="ui bottom attached segment">
-            <table class="ui celled table">
-                <thead>
-                    <tr>
-                        <th>Schaltserver</th>
-                        <th style="width: 50px;"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% if pagination.getSize() > 0 %}
-                        {% for element in pagination.getCurrentPageElements() %}
-                        {% set randomId = randomstr() %}
-                        <tr>
-                            <td {% if element.isEnabled() == false %}class="disabled"{% endif %}>
-                                <h3>{{ element.getName() | escape }}</h3>
-                                <p>{% if element.getDescription().isPresent() %}{{ element.getDescription().get() | escape }}{% endif %}</p>
-                            </td>
-                            <td>
-                                <div class="ui icon buttons">
-                                    <button title="bearbeiten" class="ui button" onclick="window.location = '/automation/admin/switchserverform?id={{ element.getId() }}'"><i class="edit icon orange large"></i></button>
-                                    <button title="l&ouml;schen" class="ui button" onclick="$('#{{ randomId }}').modal('show')"><i class="remove red icon large"></i></button>
-                                </div>
-                                <div class="ui basic modal" id="{{ randomId }}">
-                                    <div class="ui icon header">
-                                        <i class="delete icon"></i>
-                                        Schaltserver l&ouml;schen
-                                    </div>
-                                    <div class="content">
-                                        <p>Bist du sicher das du den Schaltserver l&ouml;schen m&ouml;chtest?</p>
-                                    </div>
-                                    <div class="actions">
-                                        <div class="ui red basic cancel inverted button">
-                                            <i class="remove icon"></i>
-                                            Nein
-                                        </div>
-                                        <div class="ui green ok inverted button" onclick="window.location = '/automation/admin/switchserverdelete?id={{ element.getId() }}'">
-                                            <i class="checkmark icon"></i>
-                                            Ja
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    {% else %}
-                    <tr>
-                        <td colspan="2">
-                            <div class="ui message info">
-                                <p>keine Schaltserver vorhanden</p>
+        <table class="ui celled table bottom attached">
+            <tbody>
+            {% if pagination.getSize() > 0 %}
+            {% for element in pagination.getCurrentPageElements() %}
+            {% set randomId = randomstr() %}
+            <tr>
+                <td {% if element.isEnabled() == false %}class="disabled"{% endif %}>
+                    <h3>{{ element.getName() | escape }}</h3>
+                    <p>{% if element.getDescription().isPresent() %}{{ element.getDescription().get() | escape }}{% endif %}</p>
+                </td>
+                <td style="width: 50px;">
+                    <div class="ui icon buttons">
+                        <button title="bearbeiten" class="ui button" onclick="window.location = '/automation/admin/switchserverform?id={{ element.getId() }}'"><i class="edit icon orange large"></i></button>
+                        <button title="l&ouml;schen" class="ui button" onclick="$('#{{ randomId }}').modal('show')"><i class="remove red icon large"></i></button>
+                    </div>
+                    <div class="ui basic modal" id="{{ randomId }}">
+                        <div class="ui icon header">
+                            <i class="delete icon"></i>
+                            Schaltserver l&ouml;schen
+                        </div>
+                        <div class="content">
+                            <p>Bist du sicher das du den Schaltserver l&ouml;schen m&ouml;chtest?</p>
+                        </div>
+                        <div class="actions">
+                            <div class="ui red basic cancel inverted button">
+                                <i class="remove icon"></i>
+                                Nein
                             </div>
-                        </td>
-                    </tr>
-                    {% endif %}
-                </tbody>
-                {% if pagination.hasPages() %}
-                <tfoot>
-                    <tr>
-                        <th colspan="3">
-                            <div class="ui right floated pagination menu">
-                                {% include '/webserver/template/automation/admin/pagination.html' with {pagination: pagination} %}
+                            <div class="ui green ok inverted button" onclick="window.location = '/automation/admin/switchserverdelete?id={{ element.getId() }}'">
+                                <i class="checkmark icon"></i>
+                                Ja
                             </div>
-                        </th>
-                    </tr>
-                </tfoot>
-                {% endif %}
-            </table>
-        </div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            {% endfor %}
+            {% else %}
+            <tr>
+                <td colspan="2">
+                    <div class="ui message info">
+                        <p>keine Schaltserver vorhanden</p>
+                    </div>
+                </td>
+            </tr>
+            {% endif %}
+            </tbody>
+            {% if pagination.hasPages() %}
+            <tfoot>
+                <tr>
+                    <th colspan="3">
+                        <div class="ui right floated pagination menu">
+                            {% include '/webserver/template/automation/admin/pagination.html' with {pagination: pagination} %}
+                        </div>
+                    </th>
+                </tr>
+            </tfoot>
+            {% endif %}
+        </table>
     </div>
 </main>
 </body>
