--- a/src/main/resources/webserver/template/header.html
+++ b/src/main/resources/webserver/template/header.html
@@ -2,3 +2,4 @@
         <link rel="stylesheet" type="text/css" href="/static/style/global.css">
         <script src="/static/jquery/jquery-3.3.1.js"></script>
         <script src="/static/semantic/semantic.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
